--- a/index.ipynb
+++ b/index.ipynb
@@ -77,11 +77,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "import pandas as pd\n",
+    "import sqlite3 as sq\n",
+    "\n",
+    "db = 'babe_ruth_stats.db'\n",
+    "\n",
+    "conn = sq.connect('db')\n",
+    "c = conn.cursor()\n",
+    "c.execute(\"SELECT name FROM sqlite_master WHERE type='table';\")\n",
+    "c.fetchall()"
    ]
   },
   {
@@ -94,11 +114,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'sqlite3.Cursor' object has no attribute 'schema'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-9d38b4f3bbab>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m             FROM babe_ruth_stats\"\"\"\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mschema\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;31m# c.execute(query)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;31m# df = pd.DataFrame(c.fetchall())\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# df.columns = [x[0] for x in c.description]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'sqlite3.Cursor' object has no attribute 'schema'"
+     ]
+    }
+   ],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "\n",
+    "query = \"\"\"SELECT COUNT(year) as total_years\n",
+    "            FROM babe_ruth_stats\"\"\"\n",
+    "\n",
+    "c.schema()\n",
+    "# c.execute(query)\n",
+    "# df = pd.DataFrame(c.fetchall())\n",
+    "# df.columns = [x[0] for x in c.description]\n",
+    "# df"
    ]
   },
   {
@@ -268,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
